testsuite/tests/properties/invalid_cast/not_node.lkt
import common

class ListNode: FooNode {
    @parse_field nb_list: ASTList[FooNode, NumberNode]

    @export fun prop(): Int = node.parent.as[Int]
}
